--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+.verdant-green-color {
+  color: #12674a;
+}
+
+.verdant-green-background {
+  background: #12674a;
+}
+
+.digital-lavander-color {
+  color: #12674a;
+}
+
+.digital-lavander-background {
+  background: #e6e6fa;
+}
+
+.mocha-mousse-color {
+  color: #12674a;
+}
+
+.mocha-mousse-background {
+  background: #A47864;
+}
+
+body {
+  font-family: 'PT Sans', sans-serif;
+}
