--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,7 +1,8 @@
 /* Container & stacking */
 .hero {
   position: relative;
-  height: 600px;
+  // height: 600px;
+  height: calc(100vh - 60px);
   overflow: hidden;
   display: flex;
 }
@@ -38,7 +39,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 1200px;
+  // max-width: 1200px;
   margin: 0 auto;
   height: 100%;
   padding: 2rem;
