header-dropping select and home-hero bug-fix and buttons prev-next

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,27 +1,10 @@
 <header class="site-header">
-    <div class="logo">Театар за тебе</div>
-    <nav>
-      <a 
-        routerLink="/" 
-        routerLinkActive="active" 
-        [routerLinkActiveOptions]="{ exact: true }"
-      >Home</a>
-      <a 
-        routerLink="/about" 
-        routerLinkActive="active"
-      >About</a>
-      <a 
-        routerLink="/events" 
-        routerLinkActive="active"
-      >Events</a>
-      <a 
-        routerLink="/workshops" 
-        routerLinkActive="active"
-      >Workshops</a>
-      <a 
-        routerLink="/contact" 
-        routerLinkActive="active"
-      >Contact</a>
-    </nav>
-  </header>
-  
+  <div class="logo">Театар за тебе</div>
+  <nav class="right-navbar">
+    <a class="auto-drop" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+    <a routerLink="/about" routerLinkActive="active">About</a>
+    <a routerLink="/events" routerLinkActive="active">Events</a>
+    <a routerLink="/workshops" routerLinkActive="active">Workshops</a>
+    <a routerLink="/contact" routerLinkActive="active">Contact</a>
+  </nav>
+</header>
